--- a/callmetrics_unpacking_support_satisfaction.ipynb
+++ b/callmetrics_unpacking_support_satisfaction.ipynb
@@ -1036,7 +1036,7 @@
     "# Title\n",
     "st.title(\"📞 Call Metrics: Unpacking Support Satisfaction\")\n",
     "st.write(\"The Customer Support team at Halo, a subscription-based digital content platform, is analyzing support call data for Q1 of 2021 to understand what drives customer satisfaction. This project explores patterns in call metadata, agent performance, and customer outcomes to identify ways to improve service quality.\")\n",
-    "st.markdown(\"[Click here to explore the project code on GitHub.](https://github.com/Grace-OO/Call_Metrics/tree/main)\")\n",
+    "st.markdown(\"[Click here to explore the project code on GitHub.](https://github.com/Grace-OO/Call_Metrics/blob/ba667b06ce2067bb148c77ac3b39afb5f198d2e1/callmetrics_unpacking_support_satisfaction.ipynb)\")\n",
     "\n",
     "# Load data\n",
     "@st.cache_data\n",
